# video-pipeline-gui

./: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
docs/: alpha-spike.md  architecture.md  mac-build-runbook.md
schema/: meta-schema.json
src/: command.ts  dnd.ts  forms.ts  ipc.ts  log.ts  main.ts  packaging.ts  plan.ts  previewer.ts  reframeBox.ts  state.ts  styles.css  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: command.rs  commands.rs  lib.rs  main.rs  scheduler.rs  schema.rs  state.rs  supervisor.rs
tests/: contract_test.py  reframeBox.test.ts  verify_logic.py
tests/fixtures/: golden-argv.json  sample-schema.json
